# estudando-etl

./: .gitignore  main copy.py  main.py  pyproject.toml
src/: request_data.py
